Creado mediante Colaboratory

--- a/Electrocardiogram_anomalies.ipynb
+++ b/Electrocardiogram_anomalies.ipynb
@@ -1659,13 +1659,11 @@
       "metadata": {
         "id": "DC8nMF62NWrl",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 221
-        },
-        "outputId": "a18b43f2-042f-40cf-bc5d-ceefa47ea9ae"
+        "colab": {}
       },
       "source": [
+        "import pandas as pd\n",
+        "\n",
         "minimo = 100000\n",
         "maximo = -100000\n",
         "\n",
@@ -1714,26 +1712,7 @@
         "\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "100 => 0/7 | 32/35\n",
-            "101 => 1/27 | 3/14\n",
-            "102 => 0/18 | 1890/2093\n",
-            "103 => 8/59 | 4/9\n",
-            "104 => 1/743 | 6/2148\n",
-            "105 => 15/427 | 9/165\n",
-            "106 => 59/855 | 8/591\n",
-            "107 => 0/3547 | 1/2140\n",
-            "108 => 30/90 | 24/85\n",
-            "109 => 0/417 | 1089/2535\n",
-            "111 => 1/84 | 1240/2133\n",
-            "112 => 0/5 | 12/13\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
